--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = "^0.111.1"
+uvicorn = {extras = ["standart"], version = "^0.30.1"}
 
 
 [build-system]
